syntax = "proto3";

option go_package = "./;graph_token";

package graph_token;

message CreateTokensPairRequest {
    string userId = 1;
    repeated string roles = 2;
}

message CreateTokensPairResponce {
    string accessToken = 1;
    string refreshToken = 2;
}

service CreateTokensPairService {
    rpc CreateTokensPair(CreateTokensPairRequest) returns (CreateTokensPairResponce);
}
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative protos/graph_token/graph_token.proto